# BevyCubes

./: Cargo.toml
src/: main.rs
