[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bytemuck = "1.18.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_flycam = "*"
bevy-inspector-egui = "0.26.0"
egui_dock = "0.13.0"
egui = "0.28.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3





